syntax = "proto3";

message Action {
    oneof action {
        SetDevice set_device = 1;
        RemoveDevice remove_device = 2;
        SetWebRTCStream set_web_rtc_stream = 3;
        SetActivityStream set_activity = 4;
        SetHost set_host = 5;
        AddTrophy add_trophy = 6;
        SetContent set_content = 7;
        SendChatMessage send_chat_message = 8;
        UserJoin user_join = 9;
        UserLeave user_leave = 10;
        EndClass end_class = 15;
    }
}

message ActionReciept {
    uint32 epoch = 1;
    uint32 action_counter = 2;
}

message UserJoin {}

message UserLeave {}

message EndClass {}

message SetDevice {
    Device device = 1;
}

message RemoveDevice {
    string id = 1;
}

message SetWebRTCStream {
    string device_id = 1;
    repeated WebRTCStream streams = 2;
}

message SetActivityStream {
    string device_id = 1;
    string activity_id = 2;
    string activity_stream_id = 3;
}

message SetHost {
    string id = 1;
}

message AddTrophy {
    string trophy_id = 1;
    uint64 timestamp = 2;
    string user_id = 3;
}

message SetContent {
    Content content = 1;
}

message SendChatMessage {
    string message = 1;
}

message StateChanges {
    repeated StateDiff changes = 1;
}

message StateDiff {
    oneof action {
        State get_state = 1;

        AddParticipants add_participants = 2;
        RemoveParticipants remove_participants = 3;

        ChangeContent change_content = 4;
        ChangeHost change_host = 5;

        AppendChatMessage append_chat_message = 6;
        ReceiveTrophy receive_trophy = 7;

        ClassEnded class_ended = 16;
    }
}

message Participant {
    string name = 1;
    repeated Device devices = 2;
    repeated Trophy trophies = 3;
}

message State {
    map<string, Participant> participants = 1;
    string host = 2;
    Content content = 3;
    repeated ChatMessage chat_messages = 4;
    uint32 endTimestamp = 5;
}

message AddParticipants {
    map<string, Participant> participants = 1;
}

// Array of IDs
message RemoveParticipants {
    repeated string participants = 1;
}

message ChangeContent {
    Content content = 1;
}

message ChangeHost {
    string host_id = 1;
}

message AppendChatMessage {
    repeated ChatMessage messages = 1;
}

message ReceiveTrophy {
    Trophy trophy = 1;
}

message ClassEnded {}

message Device {
    string id = 1; 
    string activityId = 2;
    string activityStreamId = 3;
    repeated WebRTCStream webRTCStreams = 4;
}

message WebRTCStream {
    string id = 1;
    string label = 2;
    repeated WebRTCTrack tracks = 3;
}

message WebRTCTrack {
    string id = 1;
    string sfu = 2;
}

message Trophy {
    string trophy = 1;
    uint32 timestamp = 2;
}

message ChatMessage {
    string message = 1;
    string from_user = 2;
    uint32 timestamp = 3;
}

enum ContentType {
    Blank = 0;
    WebRtcStream = 1;
    ActivityStream = 2;
    H5P = 3;
    Image = 4;
    Video = 5;
    Audio = 6;
}

message Content {
    ContentType type = 1;
    string id = 2;
    string url = 3;
}

